{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 577,
  "lineage": "c0218c6d-d344-4419-e912-61e4caf999d8",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "msimpson-ipdata",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/publicIPAddresses/msimpson-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.136.223",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "msimpson-pip",
            "resource_group_name": "msimpson-sandbox",
            "sku": "Basic",
            "tags": {
              "environment": "Dev-TFC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "msimpson-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/loadBalancers/msimpson-lb/frontendIPConfigurations/msimpson-PublicIPAddress",
                "name": "msimpson-PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/publicIPAddresses/msimpson-lbpip"
              }
            ],
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/loadBalancers/msimpson-lb",
            "location": "eastus",
            "name": "msimpson-lb",
            "resource_group_name": "msimpson-sandbox",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev-TFC"
            }
          },
          "dependencies": [
            "azurerm_public_ip.msimpson-lbpip",
            "azurerm_resource_group.msimpson"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "msimpson-lbbackendpool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/loadBalancers/msimpson-lb/backendAddressPools/msimpson-lbbackendpool",
            "loadbalancer_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/loadBalancers/msimpson-lb",
            "name": "msimpson-lbbackendpool"
          },
          "dependencies": [
            "azurerm_lb.msimpson-lb",
            "azurerm_public_ip.msimpson-lbpip",
            "azurerm_resource_group.msimpson"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "msimpson-lbprobe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/loadBalancers/msimpson-lb/probes/msimpson-lbprobe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/loadBalancers/msimpson-lb",
            "name": "msimpson-lbprobe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.msimpson-lb",
            "azurerm_public_ip.msimpson-lbpip",
            "azurerm_resource_group.msimpson"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "msimpson-lbrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/loadBalancers/msimpson-lb/frontendIPConfigurations/msimpson-PublicIPAddress",
            "frontend_ip_configuration_name": "msimpson-PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/loadBalancers/msimpson-lb/loadBalancingRules/msimpson-lbrule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/loadBalancers/msimpson-lb",
            "name": "msimpson-lbrule",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.msimpson-lb",
            "azurerm_public_ip.msimpson-lbpip",
            "azurerm_resource_group.msimpson"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "msimpson-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/networkInterfaces/msimpson-nic",
            "internal_domain_name_suffix": "i2s5gpghzbqenfwnsi5evg1lpg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/publicIPAddresses/msimpson-pip",
                "subnet_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/virtualNetworks/msimpson-vnet/subnets/msimpson-subnet"
              }
            ],
            "location": "eastus",
            "name": "msimpson-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "msimpson-sandbox",
            "tags": {
              "environment": "Dev-TFC"
            }
          },
          "dependencies": [
            "azurerm_public_ip.msimpson-pip",
            "azurerm_resource_group.msimpson",
            "azurerm_subnet.msimpson-subnet",
            "azurerm_virtual_network.msimpson-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "msimpson-nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/networkInterfaces/msimpson-nic2",
            "internal_domain_name_suffix": "i2s5gpghzbqenfwnsi5evg1lpg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/virtualNetworks/msimpson-vnet/subnets/msimpson-subnet2"
              }
            ],
            "location": "eastus",
            "name": "msimpson-nic2",
            "private_ip_address": "10.123.2.4",
            "private_ip_addresses": [
              "10.123.2.4"
            ],
            "resource_group_name": "msimpson-sandbox",
            "tags": {
              "environment": "Dev-TFC"
            }
          },
          "dependencies": [
            "azurerm_resource_group.msimpson",
            "azurerm_subnet.msimpson-subnet2",
            "azurerm_virtual_network.msimpson-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "msimpson-niclb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/networkInterfaces/msimpson-nic",
            "internal_domain_name_suffix": "i2s5gpghzbqenfwnsi5evg1lpg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/virtualNetworks/msimpson-vnet/subnets/msimpson-subnet"
              }
            ],
            "location": "eastus",
            "name": "msimpson-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "msimpson-sandbox",
            "tags": {
              "environment": "Dev-TFC"
            }
          },
          "dependencies": [
            "azurerm_resource_group.msimpson",
            "azurerm_subnet.msimpson-subnet",
            "azurerm_virtual_network.msimpson-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "msimpson-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/networkSecurityGroups/msimpson-SG",
            "location": "eastus",
            "name": "msimpson-SG",
            "resource_group_name": "msimpson-sandbox",
            "security_rule": [],
            "tags": {
              "environment": "Dev-TFC"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.msimpson"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "msimpson-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/networkSecurityGroups/msimpson-SG/securityRules/msimpson-rule",
            "name": "msimpson-rule",
            "network_security_group_name": "msimpson-SG",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "msimpson-sandbox",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.msimpson-SG",
            "azurerm_resource_group.msimpson"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "msimpson-lbpip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/publicIPAddresses/msimpson-lbpip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.136.203",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "msimpson-lbpip",
            "resource_group_name": "msimpson-sandbox",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev-TFC"
            }
          },
          "dependencies": [
            "azurerm_resource_group.msimpson"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "msimpson-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/publicIPAddresses/msimpson-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.172.136.223",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "msimpson-pip",
            "resource_group_name": "msimpson-sandbox",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Dev-TFC"
            }
          },
          "dependencies": [
            "azurerm_resource_group.msimpson"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "msimpson-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/virtualNetworks/msimpson-vnet/subnets/msimpson-subnet",
            "name": "msimpson-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "msimpson-sandbox",
            "virtual_network_name": "msimpson-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.msimpson",
            "azurerm_virtual_network.msimpson-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "msimpson-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/virtualNetworks/msimpson-vnet/subnets/msimpson-subnet2",
            "name": "msimpson-subnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "msimpson-sandbox",
            "virtual_network_name": "msimpson-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.msimpson",
            "azurerm_virtual_network.msimpson-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "msimpson-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/virtualNetworks/msimpson-vnet/subnets/msimpson-subnet3",
            "name": "msimpson-subnet3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "msimpson-sandbox",
            "virtual_network_name": "msimpson-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.msimpson",
            "azurerm_virtual_network.msimpson-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "msimpson-SG-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/virtualNetworks/msimpson-vnet/subnets/msimpson-subnet",
            "network_security_group_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/networkSecurityGroups/msimpson-SG",
            "subnet_id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/virtualNetworks/msimpson-vnet/subnets/msimpson-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.msimpson-SG",
            "azurerm_resource_group.msimpson",
            "azurerm_subnet.msimpson-subnet",
            "azurerm_virtual_network.msimpson-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "msimpson-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3cf32547-c8c7-4660-96cd-923e4a9b6b7e",
            "id": "/subscriptions/c759eb32-e9c8-4e19-9f2f-d036cf250f5c/resourceGroups/msimpson-sandbox/providers/Microsoft.Network/virtualNetworks/msimpson-vnet",
            "location": "eastus",
            "name": "msimpson-vnet",
            "resource_group_name": "msimpson-sandbox",
            "tags": {
              "environment": "Dev-TFC"
            }
          },
          "dependencies": [
            "azurerm_resource_group.msimpson"
          ]
        }
      ]
    }
  ]
}